...
            }
        }
    }
    
    ///Setups navigation, tableview, start battle button and loading view
    private func setupViews() {
        title = "Transformers"
        navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Add", style: .plain, target: self, action: #selector(addTransformer))
        
        tableView.delegate = self
        tableView.dataSource = self
        tableView.register(UINib(nibName: "TransformerTableViewCell", bundle: nil), forCellReuseIdentifier: "TransformerTableViewCell")
        tableView.contentInset = UIEdgeInsets(top: 0, left: 0, bottom: 80, right: 0)
        tableView.tableFooterView = UIView()
...
